Fix Trackback icon vertical alignment

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
 
 #content li.highlight .icon {
   left: 8px;
+  top: 10px;
 }
 
 .icon {
